--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ layout: default
     <div class="section-content">
         <h1>About</h1>
         <div class="border"></div>
-        <p>
-            I am a performance psychology consultant working with business professionals helping both individuals and teams perform at optimal levels when it counts.
+        <p class="large">
+            I am a performance psychology consultant working with business professionals helping both individuals and teams perform at optimal levels more consistently and when it counts the most.
         </p>
         <h3 class="small">I help you become more&#8230;</h3>
         <div class="more-section-group">
@@ -23,7 +23,8 @@ layout: default
                 <div class="item-heading large-heading">Positive</div>
                 <div class="border"></div>
                 <div class="item-subheading large-subheading">
-                    <b>About who you are and what you are doing. </b>You already have most of what you need to be successful. The goal is to get out the very best you have inside you, when it matters most, and on a more consistent basis.
+                    <b>About who you are and what you are doing. </b>
+                    You already have most of what you need to be successful. The goal is to get out the very best you have inside you.
                 </div>
             </div>
             <div class="more-section">
@@ -31,7 +32,8 @@ layout: default
                 <div class="item-heading large-heading">Focused</div>
                 <div class="border"></div>
                 <div class="item-subheading large-subheading">
-                    <b>On the things that matter most in your success. </b>For many, it is not talent or work ethic keeping them from maximizing their full potential. Rather it is their ability to focus. Success is a product of identifying and executing around correct priorities.
+                    <b>On the things that matter most in your success. </b>
+                    For many, it is not talent or work ethic keeping them from maximizing their full potential. Rather it is their ability to focus. Success is a product of identifying and executing around correct priorities.
                 </div>
             </div>
             <div class="more-section">
@@ -39,7 +41,8 @@ layout: default
                 <div class="item-heading large-heading">Fighting</div>
                 <div class="border"></div>
                 <div class="item-subheading large-subheading">
-                    <b>To overcome self-imposed obstacles. </b>Most of the fears, doubts and limiting beliefs we experience are one’s we create. Fully expressing your potential lies in your commitment to fight the good fight to overcome these self-imposed obstacles.
+                    <b>To overcome self-imposed obstacles. </b>
+                    Most of the fears, doubts and limiting beliefs we experience are one’s we create. Fully expressing your potential lies in your commitment to fight the good fight to overcome these self-imposed obstacles.
                 </div>
             </div>
         </div>
@@ -50,7 +53,7 @@ layout: default
         <div class="about-section-group">
             <div class="about-section">
                 <div class="item-heading large-heading">
-                    <div class="faux-underline-large">Positivity</div>
+                    <div class="faux-underline-large">Integrity</div>
                 </div>
                 <div class="item-subheading large-subheading">
                     I acknowledge the trust placed in me, and work to protect and honor that trust in all we do together. You can expect sincerity, honesty, forthrightness and a commitment to my values and principles.
@@ -61,7 +64,7 @@ layout: default
                     <div class="faux-underline-large">Intentionality</div>
                 </div>
                 <div class="item-subheading large-subheading">
-                    I approach our work together with purpose, and while the process employed may be multifaceted, it is goal directed  - your goals, for your life and work.
+                    I approach our work together with purpose. While the process employed may be multifaceted, it is goal directed  - your goals, for your life and work.
                 </div>
             </div>
             <div class="about-section">
@@ -69,7 +72,7 @@ layout: default
                     <div class="faux-underline-large">Accountability</div>
                 </div>
                 <div class="item-subheading large-subheading">
-                    I expect to be held accountable for the investment made by you or your company, and I will establish accountability structures with you to help generate movement toward your hopes, goals and dreams.
+                    I expect to be held accountable for the investment made by you or your company. I establish accountability structures with you to help generate movement toward your hopes, goals and dreams
                 </div>
             </div>
         </div>
@@ -86,12 +89,12 @@ layout: default
             <div class="left">
                 <div class="item-heading large-heading">Performance Coaching</div>
                 <div class="item-subheading item-description">
-                    Let me help you maximize your potential and the
-                    success of your organization by capitalizing on
-                    individual talents, executing solid processes that
-                    get results, implementing effective strategies for
-                    overcoming obstacles, and improving leadership
-                    skills that deliver results.
+                    Performance coaching is about helping you maximize your potential and the success of your business. This entails developing the skills and strategies for:
+                    <ol>
+                        <li><i>Getting out of your own way</i> - minimizing self-imposed obstacles keeping you from accessing your full potential.</li>
+                        <li><i>Getting into the game</i> - creating a positive performance mindset on demand.</li>
+                        <li><i>Staying in the game</i> - leading and managing yourself in a high-performance culture.</li>
+                    </ol>
                 </div>
             </div>
             <div class="right">
@@ -126,7 +129,11 @@ layout: default
             <div class="left">
                 <div class="item-heading large-heading">High-Performance Seminars</div>
                 <div class="item-subheading item-description">
-                    I conduct seminar applying performance psychology principles to helping people perform at the upper range of your potential more consistently. Participants discuss, learn and apply strategies for changing self-limiting beliefs and attitudes while minimizing the mental and emotional interferences keeping them from performing their best when it matters most.
+                    High-performance seminars are designed to inspire participants and provide guidance in their continued growth. Participants discuss, learn and apply strategies for changing self-limiting beliefs, minimizing the mental and emotional interferences keeping them from performing at the upper range of their potential more consistently. Performance psychology principles are applied in creating a positive performance mindset.
+                    <a class="button">Download Workbooks</a>
+                    <div class="small-note">
+                        (click for seminar workbooks and handouts)
+                    </div>
                 </div>
             </div>
             <div class="right">
@@ -162,7 +169,7 @@ layout: default
             </div>
             <div class="case-study">
                 <div class="case-study-image" style="background-image: url('/assets/images/speaking-2.jpg')" ></div>
-                <div class="case-study-name item-heading large-heading">Vanderbilt</div>
+                <div class="case-study-name item-heading large-heading">Catholic HealthCare West</div>
                 <div class="case-study-year item-supheading">2013-2015</div>
                 <div class="case-study-description item-subheading">
                     We've run social for Doctor Who on behalf of BBC America since 2011, cultivating an incredible fandom on Tumblr and Twitter and pioneering social television techniques like live-Tumblring. At the end of 2013, we rallied our community around the 50th anniversary episode to massive results. Thanks to months of participation campaigns, "The Day of the Doctor" ended up being the biggest single-day television event on Tumblr ever: larger than the VMAs, the Super Bowl, and the Grammys combined.
@@ -221,22 +228,26 @@ layout: default
         <div class="section-books">
             <div class="book">
                 <img src="http://www.drbillmoore.com/store/product_images/x/303/green_single__37767_std.png">
-                <div class="item-heading">Playing Your Best When It Counts: Mental Skills for Musicians and Performing Artists.</div>
+                <div class="item-heading">
+                    Mental Skills for Musicians and Performing Artists.
+                </div>
                 <div class="case-study-year item-supheading">$25</div>
             </div>
             <div class="book">
                 <img src="http://www.drbillmoore.com/store/product_images/j/369/Playing-Your-Best-Golf__52248_std.png">
-                <div class="item-heading">Playing Your Best When It Counts: Mental Skills for Musicians and Performing Artists.</div>
+                <div class="item-heading">
+                    Mental Skills For Tournament Golfers.</div>
                 <div class="case-study-year item-supheading">$25</div>
             </div>
             <div class="book">
                 <img src="http://www.drbillmoore.com/store/product_images/v/692/PYB_Journal__80366_std.png">
-                <div class="item-heading">Playing Your Best When It Counts: High Performance Journal</div>
+                <div class="item-heading">
+                    High Performance Journal</div>
                 <div class="case-study-year item-supheading">$25</div>
             </div>
             <div class="book">
                 <img src="http://www.drbillmoore.com/store/product_images/x/303/green_single__37767_std.png">
-                <div class="item-heading">Playing Your Best When It Counts: High Performance Workbook</div>
+                <div class="item-heading">High Performance Workbook</div>
                 <div class="case-study-year item-supheading">$25</div>
             </div>
         </div>
