update quotes section

--- a/index.html
+++ b/index.html
@@ -154,25 +154,25 @@ layout: default
             <div class="case-study">
                 <div class="case-study-image" style="background-image: url('/assets/images/speaking-1.jpg')" ></div>
                 <div class="case-study-name item-heading large-heading">Nokia</div>
-                <div class="case-study-year item-supheading">2010-2015</div>
                 <div class="case-study-description item-subheading">
-                    We've run social for Doctor Who on behalf of BBC America since 2011, cultivating an incredible fandom on Tumblr and Twitter and pioneering social television techniques like live-Tumblring. At the end of 2013, we rallied our community around the 50th anniversary episode to massive results. Thanks to months of participation campaigns, "The Day of the Doctor" ended up being the biggest single-day television event on Tumblr ever: larger than the VMAs, the Super Bowl, and the Grammys combined.
+                    &ldquo;Your Managing Imbalance seminar was exceptional. We work in a very hectic and fast moving business environment. This 2-day seminar focused on specific skills for improving each team member’s ability to achieve excellence while managing the imbalance in their personal lives. It was a great success. I still have team members coming to me and talking about the discussions and exercises we did during those two days.&rdquo;
+                    <div class="source">&mdash; <i>Markku Savusalo, Managing Director Nokia, Oulu Finland</i></div>
                 </div>
             </div>
             <div class="case-study">
                 <div class="case-study-image" style="background-image: url('/assets/images/speaking-3.jpg')" ></div>
-                <div class="case-study-name item-heading large-heading">Lifetime Financial</div>
-                <div class="case-study-year item-supheading">2014-2015</div>
+                <div class="case-study-name item-heading large-heading">Lifetime Financial Growth</div>
                 <div class="case-study-description item-subheading">
-                    We've run social for Doctor Who on behalf of BBC America since 2011, cultivating an incredible fandom on Tumblr and Twitter and pioneering social television techniques like live-Tumblring. At the end of 2013, we rallied our community around the 50th anniversary episode to massive results. Thanks to months of participation campaigns, "The Day of the Doctor" ended up being the biggest single-day television event on Tumblr ever: larger than the VMAs, the Super Bowl, and the Grammys combined.
+                    &ldquo;Dr. Moore has been a visible and valuable asset to our company. So much so, we appointed him to our Board of Directors. He is involved in weekly performance coaching sessions with many of our agents and conducts monthly seminars at various LFG locations. He has demonstrated an ability to maximize the potential of our agents, both personally and financially.&rdquo;
+                    <div class="source">&mdash; <i>Earl Luttner, CEO and Chairman of the Board, Lifetime Financial Growth, LLC</i></div>
                 </div>
             </div>
             <div class="case-study">
                 <div class="case-study-image" style="background-image: url('/assets/images/speaking-2.jpg')" ></div>
                 <div class="case-study-name item-heading large-heading">Catholic HealthCare West</div>
-                <div class="case-study-year item-supheading">2013-2015</div>
                 <div class="case-study-description item-subheading">
-                    We've run social for Doctor Who on behalf of BBC America since 2011, cultivating an incredible fandom on Tumblr and Twitter and pioneering social television techniques like live-Tumblring. At the end of 2013, we rallied our community around the 50th anniversary episode to massive results. Thanks to months of participation campaigns, "The Day of the Doctor" ended up being the biggest single-day television event on Tumblr ever: larger than the VMAs, the Super Bowl, and the Grammys combined.
+                    &ldquo;Thank you again for the inspirational message you shared. Your keynote was extremely timely for us and the Catholic Healthcare West team especially appreciated your enthusiasm and candor. Of all the presentations at our retreat, yours received the highest evaluation rating by our staff.&rdquo;
+                    <div class="source">&mdash; <i>Lori Aldrete, Vice president, corporate communications, CHW</i></div>
                 </div>
             </div>
         </div>
