update formatting of lists

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ layout: default
                 <div class="item-subheading item-description">
                     Performance coaching is about helping you maximize your potential and the success of your business. This entails developing the skills and strategies for:
                     <ol>
-                        <li><i>Getting out of your own way</i> - minimizing self-imposed obstacles keeping you from accessing your full potential.</li>
-                        <li><i>Getting into the game</i> - creating a positive performance mindset on demand.</li>
-                        <li><i>Staying in the game</i> - leading and managing yourself in a high-performance culture.</li>
+                        <li><i>Getting out of your own way:</i> minimizing self-imposed obstacles keeping you from accessing your full potential.</li>
+                        <li><i>Getting into the game:</i> creating a positive performance mindset on demand.</li>
+                        <li><i>Staying in the game:</i> leading and managing yourself in a high-performance culture.</li>
                     </ol>
                 </div>
             </div>
@@ -114,7 +114,6 @@ layout: default
                     I speak on topics related to human performance in the workplace. I customize my material to meet the specific needs of organizations in order to facilitate their desired outcomes.
                 </div>
                 <a class="button">Book Me</a>
-                <div class="small-note">About one email a month</div>
             </div>
             <div class="right">
                 <iframe src="https://player.vimeo.com/video/51351649" width="550" height="323" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -132,7 +131,7 @@ layout: default
                     High-performance seminars are designed to inspire participants and provide guidance in their continued growth. Participants discuss, learn and apply strategies for changing self-limiting beliefs, minimizing the mental and emotional interferences keeping them from performing at the upper range of their potential more consistently. Performance psychology principles are applied in creating a positive performance mindset.
                     <a class="button">Download Workbooks</a>
                     <div class="small-note">
-                        (click for seminar workbooks and handouts)
+                        Click for seminar workbooks and handouts
                     </div>
                 </div>
             </div>
