--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
         <h3 class="small">I help you become more&#8230;</h3>
         <div class="more-section-group">
             <div class="more-section">
-                <div class="font-heading fa fa-4x fa-heart"></div>
+                <div class="font-heading fa fa-4x fa-thumbs-up"></div>
                 <div class="item-heading large-heading">Positive</div>
                 <div class="border"></div>
                 <div class="item-subheading large-subheading">
@@ -28,7 +28,7 @@ layout: default
                 </div>
             </div>
             <div class="more-section">
-                <div class="font-heading fa fa-4x fa-institution"></div>
+                <div class="font-heading fa fa-4x fa-binoculars"></div>
                 <div class="item-heading large-heading">Focused</div>
                 <div class="border"></div>
                 <div class="item-subheading large-subheading">
@@ -98,7 +98,7 @@ layout: default
                 </div>
             </div>
             <div class="right">
-                <a class="button">Inquire about performance coaching</a>
+                <a class="button" href="mailto:bemore@drbillmoore.com?subject=Inquiry about performance coaching">Inquire about performance coaching</a>
                 <div class="small-note">I will honor confidentiality, availability and integrity</div>
             </div>
         </div>
@@ -113,7 +113,7 @@ layout: default
                 <div class="item-subheading item-description">
                     I speak on topics related to human performance in the workplace. I customize my material to meet the specific needs of organizations in order to facilitate their desired outcomes.
                 </div>
-                <a class="button">Book Me</a>
+                <a class="button" href="mailto:bemore@drbillmoore.com?subject=Corporate Speaking">Book Me</a>
             </div>
             <div class="right">
                 <iframe src="https://player.vimeo.com/video/51351649" width="550" height="323" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
@@ -129,14 +129,14 @@ layout: default
                 <div class="item-heading large-heading">High-Performance Seminars</div>
                 <div class="item-subheading item-description">
                     High-performance seminars are designed to inspire participants and provide guidance in their continued growth. Participants discuss, learn and apply strategies for changing self-limiting beliefs, minimizing the mental and emotional interferences keeping them from performing at the upper range of their potential more consistently. Performance psychology principles are applied in creating a positive performance mindset.
-                    <a class="button">Download Workbooks</a>
+                    <a class="button" href="/assets/pdf/getting-where-you-want-to-go.pdf">Download Workbooks</a>
                     <div class="small-note">
                         Click for seminar workbooks and handouts
                     </div>
                 </div>
             </div>
             <div class="right">
-                <a class="button">Inquire about high-performance seminars</a>
+                <a class="button" href="mailto:bemore@drbillmoore.com?subject=Inquiry about high-performance seminars">Inquire about high-performance seminars</a>
                 <div class="small-note">I will honor confidentiality, availability and integrity</div>
             </div>
         </div>
@@ -256,14 +256,14 @@ layout: default
 <div class="separate"></div>
 <section class="large-footer" id="large-footer">
     <div class="section-content">
-    <h1>Dr. Bill Moore</h1>
-    <div class="portrait"></div>
-    <p>
-        Influential Author, International Speaker and Executive Coach, Dr. Moore has trained world class athletes, performing artists, business professionals, and organizations in the United States and Europe. He holds a Doctorate degree in Sport Psychology from the University of Virgina. His unique blend of experiences as a professional tennis player, intercollegiate coach and performatnce psychology specialist has help to develop his reputation as a leading authority in his field.
-    </p>
-    <p>Currently living in Oklahoma with my wife Nicki and son Ian.</p>
-    <div class="border"></div>
-    <h1 class="small-width">Be more positive, focused and fighting</h1>
-    <a class="button">Inquire about executive coaching</a>
+        <h1>Dr. Bill Moore</h1>
+        <div class="portrait"></div>
+        <p>
+            Influential Author, International Speaker and Executive Coach, Dr. Moore has trained world class athletes, performing artists, business professionals, and organizations in the United States and Europe. He holds a Doctorate degree in Sport Psychology from the University of Virgina. His unique blend of experiences as a professional tennis player, intercollegiate coach and performatnce psychology specialist has help to develop his reputation as a leading authority in his field.
+        </p>
+        <p>Currently living in Oklahoma with my wife Nicki and son Ian.</p>
+        <div class="border"></div>
+        <h1 class="small-width">Be more positive, focused and fighting</h1>
+        <a class="button" href="mailto:bemore@drbillmoore.com?subject=Inquiry about performance coaching">Inquire about performance coaching</a>
     </div>
 </section>
