update books section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ layout: default
         <p class="large">
             I am a performance psychology consultant working with business professionals helping both individuals and teams perform at optimal levels more consistently and when it counts the most.
         </p>
+    </div>
+</section>
+<section class="purple-section" id="help-become">
+    <div class="section-content">
         <h3 class="small">I help you become more&#8230;</h3>
         <div class="more-section-group">
             <div class="more-section">
@@ -46,6 +50,10 @@ layout: default
                 </div>
             </div>
         </div>
+    </div>
+</section>
+<section class="about">
+    <div class="section-content">
         <h3>Touchstones</h3>
         <p>
             I believe maximizing your full potential can be achieved with passion and persistence. Every individual possesses the strengths enabling him or her to overcome obstacles and move beyond common performance into the realm of uncommon, passionate performance. The following are the standards you can expect from me.
@@ -85,7 +93,7 @@ layout: default
     <div class="section-content">
         <h1>What I do</h1>
         <div class="border"></div>
-        <div class="section-do">
+        <div class="section-do" id="coaching">
             <div class="left">
                 <div class="item-heading large-heading">Performance Coaching</div>
                 <div class="item-subheading item-description">
@@ -105,7 +113,7 @@ layout: default
     </div>
 </section>
 
-<section class="purple-section">
+<section class="purple-section" id="speaking">
     <div class="section-content">
         <div class="section-do third-size">
             <div class="left">
@@ -131,7 +139,7 @@ layout: default
                     High-performance seminars are designed to inspire participants and provide guidance in their continued growth. Participants discuss, learn and apply strategies for changing self-limiting beliefs, minimizing the mental and emotional interferences keeping them from performing at the upper range of their potential more consistently. Performance psychology principles are applied in creating a positive performance mindset.
                     <a class="button" href="/assets/pdf/getting-where-you-want-to-go.pdf">Download Workbooks</a>
                     <div class="small-note">
-                        Click for seminar workbooks and handouts
+                        Click for free seminar workbooks and handouts
                     </div>
                 </div>
             </div>
@@ -226,27 +234,88 @@ layout: default
         <div class="border"></div>
         <div class="section-books">
             <div class="book">
-                <img src="http://www.drbillmoore.com/store/product_images/x/303/green_single__37767_std.png">
-                <div class="item-heading">
-                    Mental Skills for Musicians and Performing Artists.
+                <img src="/assets/images/musicians.jpg">
+                <div class="item-heading large-heading">
+                    Mental Skills for Musicians and Performing Artists
+                </div>
+                <div class="item-subheading">
+                    How do you train mental performance skills in
+                    practice? This book was created with this question
+                    in mind and is designed to provide a solid
+                    foundation for developing and executing the mental
+                    skills necessary for playing your best when it
+                    counts. You will find the material in each chapter
+                    to be very applicable to your performance
+                    reality. Each chapter leads you into thinking
+                    about and applying the information directly to
+                    your practices and performances.
                 </div>
                 <div class="case-study-year item-supheading">$25</div>
             </div>
             <div class="book">
-                <img src="http://www.drbillmoore.com/store/product_images/j/369/Playing-Your-Best-Golf__52248_std.png">
-                <div class="item-heading">
-                    Mental Skills For Tournament Golfers.</div>
+                <img src="/assets/images/golf.png">
+                <div class="item-heading large-heading">
+                    Mental Skills For Tournament Golfers
+                </div>
+                <div class="item-subheading">
+                    Are you ready to take your game to the next level?
+                    If so, this book will help you play competitive
+                    golf with more confidence in your game and trust
+                    in your swing. Whether you are a professional
+                    golfer or simply someone passionate about your
+                    game, this book will help you become more mentally
+                    stronger.
+                </div>
                 <div class="case-study-year item-supheading">$25</div>
             </div>
             <div class="book">
-                <img src="http://www.drbillmoore.com/store/product_images/v/692/PYB_Journal__80366_std.png">
-                <div class="item-heading">
-                    High Performance Journal</div>
+                <img src="/assets/images/journal.png">
+                <div class="item-heading large-heading">
+                    High Performance Journal
+                </div>
+                <div class="item-subheading">
+                    For years, successful musicians have used this
+                    journal with positive effects on their personal
+                    development and performance outcomes. This is a
+                    tool for you to train yourself to be
+                    strength-focused and solution oriented. It not
+                    only allows you to monitor improvement of your
+                    psychological skills, but it also enables you to
+                    record solutions and to reflect upon the positive
+                    aspects of both your practices and performances.
+                </div>
+                <div class="case-study-year item-supheading">$25</div>
+            </div>
+        </div>
+        <div class="section-books">
+            <div class="book">
+                <img src="/assets/images/workbook.png">
+                <div class="item-heading large-heading">High Performance Workbook</div>
+                <div class="item-subheading">
+                    This workbook provides the opportunity to refine
+                    and development your psychological performance
+                    skills. Each chapter guides you in applying the
+                    information directly to your practices and
+                    performances. The exercises and activities in this
+                    book have been developed over many years of
+                    helping musicians perform their best when it
+                    counts.
+                </div>
                 <div class="case-study-year item-supheading">$25</div>
             </div>
             <div class="book">
-                <img src="http://www.drbillmoore.com/store/product_images/x/303/green_single__37767_std.png">
-                <div class="item-heading">High Performance Workbook</div>
+                <img src="/assets/images/workbook.png">
+                <div class="item-heading large-heading">High Performance Workbook</div>
+                <div class="item-subheading">
+                    This workbook provides the opportunity to refine
+                    and development your psychological performance
+                    skills. Each chapter guides you in applying the
+                    information directly to your practices and
+                    performances. The exercises and activities in this
+                    book have been developed over many years of
+                    helping musicians perform their best when it
+                    counts.
+                </div>
                 <div class="case-study-year item-supheading">$25</div>
             </div>
         </div>
