--- a/index.html
+++ b/index.html
@@ -251,6 +251,12 @@ layout: default
                     your practices and performances.
                 </div>
                 <div class="case-study-year item-supheading">$25</div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="RF6AHRB7TLTG4">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
             </div>
             <div class="book">
                 <img src="/assets/images/golf.png">
@@ -267,6 +273,12 @@ layout: default
                     stronger.
                 </div>
                 <div class="case-study-year item-supheading">$25</div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="UX8JR8BZUQ9RA">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
             </div>
             <div class="book">
                 <img src="/assets/images/journal.png">
@@ -284,7 +296,14 @@ layout: default
                     record solutions and to reflect upon the positive
                     aspects of both your practices and performances.
                 </div>
-                <div class="case-study-year item-supheading">$25</div>
+                <div class="case-study-year item-supheading">$20</div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="GFWSG4JSW2F6E">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
+
             </div>
         </div>
         <div class="section-books">
@@ -302,6 +321,12 @@ layout: default
                     counts.
                 </div>
                 <div class="case-study-year item-supheading">$25</div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="ZPTL3V2324VMW">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
             </div>
             <div class="book">
                 <img src="/assets/images/workbook.png">
