--- a/index.html
+++ b/index.html
@@ -234,6 +234,73 @@ layout: default
         <div class="border"></div>
         <div class="section-books">
             <div class="book">
+                <img src="/assets/images/prospecting.jpg">
+                <div class="item-heading large-heading">Fearless Prospecting: Getting out of your way and into the game</div>
+                <div class="item-subheading">
+                    This workbook provides the opportunity to refine
+                    and development your psychological performance
+                    skills. Each chapter guides you in applying the
+                    information directly to your practices and
+                    performances. The exercises and activities in this
+                    book have been developed over many years of
+                    helping musicians perform their best when it
+                    counts.
+                </div>
+                <div class="case-study-year item-supheading">$25</div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="E5DU93TJFR6JL">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
+
+            </div>
+            <div class="book">
+                <img src="/assets/images/excellence.jpg">
+                <div class="item-heading large-heading">Imbalanced Excellence: Leading and managing your pursuit of excellence in an imbalanced world</div>
+                <div class="item-subheading">
+                    This workbook provides the opportunity to refine
+                    and development your psychological performance
+                    skills. Each chapter guides you in applying the
+                    information directly to your practices and
+                    performances. The exercises and activities in this
+                    book have been developed over many years of
+                    helping musicians perform their best when it
+                    counts.
+                </div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="JB3VE3ES6LVNY">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
+
+                <div class="case-study-year item-supheading">$25</div>
+            </div>
+            <div class="book">
+                <img src="/assets/images/workbook.png">
+                <div class="item-heading large-heading">High Performance Workbook</div>
+                <div class="item-subheading">
+                    This workbook provides the opportunity to refine
+                    and development your psychological performance
+                    skills. Each chapter guides you in applying the
+                    information directly to your practices and
+                    performances. The exercises and activities in this
+                    book have been developed over many years of
+                    helping musicians perform their best when it
+                    counts.
+                </div>
+                <div class="case-study-year item-supheading">$25</div>
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="ZPTL3V2324VMW">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
+            </div>
+        </div>
+        <div class="section-books">
+            <div class="book">
                 <img src="/assets/images/musicians.jpg">
                 <div class="item-heading large-heading">
                     Mental Skills for Musicians and Performing Artists
@@ -254,28 +321,6 @@ layout: default
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="RF6AHRB7TLTG4">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                </form>
-            </div>
-            <div class="book">
-                <img src="/assets/images/golf.png">
-                <div class="item-heading large-heading">
-                    Mental Skills For Tournament Golfers
-                </div>
-                <div class="item-subheading">
-                    Are you ready to take your game to the next level?
-                    If so, this book will help you play competitive
-                    golf with more confidence in your game and trust
-                    in your swing. Whether you are a professional
-                    golfer or simply someone passionate about your
-                    game, this book will help you become more mentally
-                    stronger.
-                </div>
-                <div class="case-study-year item-supheading">$25</div>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="UX8JR8BZUQ9RA">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
@@ -303,45 +348,28 @@ layout: default
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-
             </div>
-        </div>
-        <div class="section-books">
             <div class="book">
-                <img src="/assets/images/workbook.png">
-                <div class="item-heading large-heading">High Performance Workbook</div>
+                <img src="/assets/images/golf.png">
+                <div class="item-heading large-heading">
+                    Mental Skills For Tournament Golfers
+                </div>
                 <div class="item-subheading">
-                    This workbook provides the opportunity to refine
-                    and development your psychological performance
-                    skills. Each chapter guides you in applying the
-                    information directly to your practices and
-                    performances. The exercises and activities in this
-                    book have been developed over many years of
-                    helping musicians perform their best when it
-                    counts.
+                    Are you ready to take your game to the next level?
+                    If so, this book will help you play competitive
+                    golf with more confidence in your game and trust
+                    in your swing. Whether you are a professional
+                    golfer or simply someone passionate about your
+                    game, this book will help you become more mentally
+                    stronger.
                 </div>
                 <div class="case-study-year item-supheading">$25</div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
-                    <input type="hidden" name="hosted_button_id" value="ZPTL3V2324VMW">
+                    <input type="hidden" name="hosted_button_id" value="UX8JR8BZUQ9RA">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-            </div>
-            <div class="book">
-                <img src="/assets/images/workbook.png">
-                <div class="item-heading large-heading">High Performance Workbook</div>
-                <div class="item-subheading">
-                    This workbook provides the opportunity to refine
-                    and development your psychological performance
-                    skills. Each chapter guides you in applying the
-                    information directly to your practices and
-                    performances. The exercises and activities in this
-                    book have been developed over many years of
-                    helping musicians perform their best when it
-                    counts.
-                </div>
-                <div class="case-study-year item-supheading">$25</div>
             </div>
         </div>
     </div>
