style updates for books

--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@ layout: default
         <div class="section-books">
             <div class="book">
                 <img src="/assets/images/prospecting.jpg">
-                <div class="item-heading large-heading">Fearless Prospecting: Getting out of your way and into the game</div>
+                <div class="item-heading large-heading">Fearless Prospecting</div>
+                <div class="item-supheading">Getting out of your way and into the game</div>
                 <div class="item-subheading">
                     This workbook provides the opportunity to refine
                     and development your psychological performance
@@ -257,7 +258,8 @@ layout: default
             </div>
             <div class="book">
                 <img src="/assets/images/excellence.jpg">
-                <div class="item-heading large-heading">Imbalanced Excellence: Leading and managing your pursuit of excellence in an imbalanced world</div>
+                <div class="item-heading large-heading">Imbalanced Excellence</div>
+                <div class="item-supheading">Leading and managing your pursuit of excellence in an imbalanced world</div>
                 <div class="item-subheading">
                     This workbook provides the opportunity to refine
                     and development your psychological performance
@@ -280,6 +282,7 @@ layout: default
             <div class="book">
                 <img src="/assets/images/workbook.png">
                 <div class="item-heading large-heading">High Performance Workbook</div>
+                <div class="item-supheading">Playing your best when it counts</div>
                 <div class="item-subheading">
                     This workbook provides the opportunity to refine
                     and development your psychological performance
@@ -299,6 +302,7 @@ layout: default
                 </form>
             </div>
         </div>
+        <h3>Books for Athletes and Musicians</h3>
         <div class="section-books">
             <div class="book">
                 <img src="/assets/images/musicians.jpg">
