improve experience on mobile

--- a/index.html
+++ b/index.html
@@ -303,7 +303,18 @@ layout: default
             </div>
         </div>
         <h3>Books for Athletes and Musicians</h3>
-        <div class="section-books">
+        <div class="section-books quarter">
+            <div class="book">
+                <img src="/assets/images/where-you-want.jpg">
+                <div class="item-heading large-heading">
+                    Getting Where You Want to Go
+                </div>
+                <div class="item-subheading">
+                    Are you ready to take yourself to the next level? If so, this book will help you create an overriding vision of where you want to go and how you want to get there.
+                </div>
+                <div class="case-study-year item-supheading">Free</div>
+                <a class="button" href="/assets/pdf/getting-where-you-want-to-go.pdf">Download</a>
+            </div>
             <div class="book">
                 <img src="/assets/images/musicians.jpg">
                 <div class="item-heading large-heading">
