improve formatting of book images

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ layout: default
         <div class="border"></div>
         <div class="section-books">
             <div class="book">
-                <img src="/assets/images/prospecting.jpg">
+                <div class="case-study-image" style="background-image: url('/assets/images/prospecting.jpg')"></div>
                 <div class="item-heading large-heading">Fearless Prospecting</div>
                 <div class="item-supheading">Getting out of your way and into the game</div>
                 <div class="item-subheading">
@@ -257,7 +257,7 @@ layout: default
 
             </div>
             <div class="book">
-                <img src="/assets/images/excellence.jpg">
+                <div class="case-study-image" style="background-image: url('/assets/images/excellence.jpg')"></div>
                 <div class="item-heading large-heading">Imbalanced Excellence</div>
                 <div class="item-supheading">Leading and managing your pursuit of excellence in an imbalanced world</div>
                 <div class="item-subheading">
@@ -280,7 +280,7 @@ layout: default
                 <div class="case-study-year item-supheading">$25</div>
             </div>
             <div class="book">
-                <img src="/assets/images/workbook.png">
+                <div class="case-study-image" style="background-image: url('/assets/images/workbook.png')"></div>
                 <div class="item-heading large-heading">High Performance Workbook</div>
                 <div class="item-supheading">Playing your best when it counts</div>
                 <div class="item-subheading">
@@ -305,7 +305,7 @@ layout: default
         <h3>Books for Athletes and Musicians</h3>
         <div class="section-books quarter">
             <div class="book">
-                <img src="/assets/images/where-you-want.jpg">
+                <div class="case-study-image" style="background-image: url('/assets/images/where-you-want.jpg')"></div>
                 <div class="item-heading large-heading">
                     Getting Where You Want to Go
                 </div>
@@ -316,7 +316,7 @@ layout: default
                 <a class="button" href="/assets/pdf/getting-where-you-want-to-go.pdf">Download</a>
             </div>
             <div class="book">
-                <img src="/assets/images/musicians.jpg">
+                <div class="case-study-image" style="background-image: url('/assets/images/musicians.jpg')"></div>
                 <div class="item-heading large-heading">
                     Mental Skills for Musicians and Performing Artists
                 </div>
@@ -341,7 +341,7 @@ layout: default
                 </form>
             </div>
             <div class="book">
-                <img src="/assets/images/journal.png">
+                <div class="case-study-image" style="background-image: url('/assets/images/journal.png')"></div>
                 <div class="item-heading large-heading">
                     High Performance Journal
                 </div>
@@ -365,7 +365,7 @@ layout: default
                 </form>
             </div>
             <div class="book">
-                <img src="/assets/images/golf.png">
+                <div class="case-study-image" style="background-image: url('/assets/images/golf.png')"></div>
                 <div class="item-heading large-heading">
                     Mental Skills For Tournament Golfers
                 </div>
