--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     <h3>Helping You Succeed in Competitive Performance Environments</h3>
 </div>
 
-<div class="separate"></div>
+<div class="separate first"></div>
 <section class="about" id="about">
     <div class="section-content">
         <h1>About</h1>
