update book styles

--- a/index.html
+++ b/index.html
@@ -151,7 +151,6 @@ layout: default
     </div>
 </section>
 
-
 <div class="separate"></div>
 <section class="more-info" id="work">
     <div class="section-content">
@@ -247,14 +246,13 @@ layout: default
                     helping musicians perform their best when it
                     counts.
                 </div>
-                <div class="case-study-year item-supheading">$25</div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="E5DU93TJFR6JL">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-
+                <div class="book-price item-supheading">$25</div>
             </div>
             <div class="book">
                 <div class="case-study-image" style="background-image: url('/assets/images/excellence.jpg')"></div>
@@ -276,8 +274,7 @@ layout: default
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
-
-                <div class="case-study-year item-supheading">$25</div>
+                <div class="book-price item-supheading">$25</div>
             </div>
             <div class="book">
                 <div class="case-study-image" style="background-image: url('/assets/images/workbook.png')"></div>
@@ -293,13 +290,13 @@ layout: default
                     helping musicians perform their best when it
                     counts.
                 </div>
-                <div class="case-study-year item-supheading">$25</div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="ZPTL3V2324VMW">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
+                <div class="book-price item-supheading">$25</div>
             </div>
         </div>
         <h3>Books for Athletes and Musicians</h3>
@@ -312,8 +309,7 @@ layout: default
                 <div class="item-subheading">
                     Are you ready to take yourself to the next level? If so, this book will help you create an overriding vision of where you want to go and how you want to get there.
                 </div>
-                <div class="case-study-year item-supheading">Free</div>
-                <a class="button" href="/assets/pdf/getting-where-you-want-to-go.pdf">Download</a>
+                <div class="book-price item-supheading">$25</div>
             </div>
             <div class="book">
                 <div class="case-study-image" style="background-image: url('/assets/images/musicians.jpg')"></div>
@@ -332,13 +328,13 @@ layout: default
                     about and applying the information directly to
                     your practices and performances.
                 </div>
-                <div class="case-study-year item-supheading">$25</div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="RF6AHRB7TLTG4">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
+                <div class="book-price item-supheading">$25</div>
             </div>
             <div class="book">
                 <div class="case-study-image" style="background-image: url('/assets/images/journal.png')"></div>
@@ -356,13 +352,13 @@ layout: default
                     record solutions and to reflect upon the positive
                     aspects of both your practices and performances.
                 </div>
-                <div class="case-study-year item-supheading">$20</div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="GFWSG4JSW2F6E">
                     <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynow_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                     <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                 </form>
+                <div class="book-price item-supheading">$20</div>
             </div>
             <div class="book">
                 <div class="case-study-image" style="background-image: url('/assets/images/golf.png')"></div>
@@ -378,7 +374,7 @@ layout: default
                     game, this book will help you become more mentally
                     stronger.
                 </div>
-                <div class="case-study-year item-supheading">$25</div>
+                <div class="book-price item-supheading">$25</div>
                 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                     <input type="hidden" name="cmd" value="_s-xclick">
                     <input type="hidden" name="hosted_button_id" value="UX8JR8BZUQ9RA">
